fix: skins packs without skins breaks the center text alignment